objects/zoom_app__Zoom_Webinar_Panelist__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Url__c</fullName>
        <label>Join Url</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Panelist_Email__c</fullName>
        <label>Panelist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zoom_app__Panelist_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Panelist ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar</label>
        <referenceTo>zoom_app__Zoom_Webinar__c</referenceTo>
        <relationshipName>Zoom_Panelists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zoom Webinar Panelist</label>
    <nameField>
        <label>Zoom Panelist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Webinar Panelists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>